--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@mdi/font": "^7.4.47",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "export-to-csv": "^1.3.0",
     "vue": "^3.4.21",
     "vuetify": "^3.6.6"
   },
